# solitaire

./: .gitignore  CMakeLists.txt  backround.tga  highscores.txt  readme.md  solitaire  solitaire.c  solitaire.cpp
original-src/: dump.txt  solitaire - original.cpp
